--- a/src/components/MenuList.css
+++ b/src/components/MenuList.css
@@ -16,6 +16,8 @@
   padding: 20px;
   transition: all 0.3s ease;
   border: 2px solid black;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-item:hover {
